styles/layout.css
:root {
  
  --master-column-count: 4;
  --gutter: 20px;
  --split-secondary: 1;
  --split-tertiary: 1;
  
}

.grid-prime, .grid-secondary, .grid-tertiary {
  display:grid;
  grid-template-columns: repeat(var(--master-column-count), 1fr);
  grid-gap: var(--gutter);
  grid-row-gap: 0;
  
  padding-left: 35px;
  padding-right: 35px;
}

.grid-secondary {
  height: 100vh;
  min-height: 480px;
  max-height: 600px;
}

.intro-title {
  text-align: center;
  width: 100%;
  height: 100vh;
  height: calc(var(--vh, 1vh) * 100);
  
  justify-content:center;
  align-items:center;
  
  grid-template-rows: repeat(3, 1fr);
  
  padding-top: 10%;
  padding-bottom: 10%;
}

.title-text {
  grid-column: 1 / -1;
}

.seal {
  justify-self: center;
  grid-column: 2 / -2;
}

.intro-arrow {
  justify-self: center;
  grid-column: 2 / -2;
}

.intro-blurb .squiggle {
  grid-column: span 2;
}

.intro-text {
  grid-column: 1 / -1;
}

.intro-blurb {
  width: 100%;
  padding-top: 320px;
  padding-bottom: 100px;
}

.content-container {
  display: grid;
  grid-template-columns: 1, 1fr;
}

.content-item * {
  grid-column: 1 / -1;
}

.case-study {
  grid-template-rows: auto 1fr auto;
  align-items: end;
}

.case-study small {
  padding-bottom: 30px;
}

.case-study img {
  grid-column: span var(--master-column-count);
  transform: scale(90%);
  transform-origin: left;
  justify-self: start;
  position: relative;
}

.case-study, .quote, .client-list {
  padding-top: 60px;
  padding-bottom: 60px;
}
 
.quote {
  grid-template-rows: auto 1fr auto auto;
  align-items: end;
  align-content: end;
  grid-row-gap: 0;
}

figure blockquote {
  margin-top: 90px;
}

.responsible {
  padding-top: 15vh;
  padding-bottom: 15vh;
  grid-row-gap: 0;
}

.responsible h2 {
  margin-bottom: 150px;
}

.signature {
  grid-column-start: 1;
  margin: 40px 0 -20px 0;
}

.client-list {
  padding-bottom: 100px;
}

.client-list small {
  margin-bottom: 100px;
}

footer {
  align-items: center;
  grid-row-gap: 0;
  padding-top: 20px;
  padding-bottom: 52px;
}

footer .toggle-colophon {
  grid-column: 1 / 3;
}

footer .contact {
  grid-column: -1 / -3;
  text-align: right;
}

footer .copyright {
  grid-column: 1 / -1;
}

/* ——————————————–––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––– */
/* ——————————————–––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––– */
/* ——————————————–––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––– */
/* ——————————————–––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––– */
/* ——————————————–––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––– */
/* ——————————————–––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––– */
/* MEDIA QUERIES –––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––– */
/* ——————————————–––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––– */
/* ——————————————–––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––– */
/* ——————————————–––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––– */
/* ——————————————–––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––– */
/* ——————————————–––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––– */
/* ——————————————–––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––– */



@media (min-width: 640px) {
  
  :root{
    --master-column-count: 6;
  }
  
  .title-text, .intro-text, .content-item * {
    grid-column: 2 / -2;
  }
  
  .seal {
    grid-column: 1 / -1;
  }
  
  .intro-blurb .squiggle {
    grid-column: 2/ span 2;
  }
  
  .intro-blurb .intro-text {
    grid-column: 2 / span 3;
  }
  
  .intro-blurb {
    padding-top: 320px;
  }
  
  figure blockquote {
    margin-top: 120px;
  }
  
  footer {
    padding-top: 80px;
    padding-bottom: 104px;
  }
  
  footer .toggle-colophon {
    grid-column: 2 / 4;
  }
  
  footer .contact {
    grid-column: -2 / -4;
  }
  
  footer .copyright {
    grid-column: 2 / -2;
  }
  
}

@media (min-width: 760px) {
  
  .intro-blurb .intro-text {
    grid-column: 2 / span 4;
  }
  
  .content-item {
    padding-top: 90px;
    padding-bottom: 90px;
  }
  
}

@media (min-width: 900px) {
  
  :root{
    --master-column-count: 12;
    --gutter: 12px;
    --split-secondary: 7;
    --split-tertiary: 5;
  }
  
  .grid-prime, .grid-secondary, .grid-tertiary {
    padding-left: calc(var(--gutter)/2);
    padding-right: calc(var(--gutter)/2);;
    grid-gap: var(--gutter);
  }
  
  .grid-prime {
    grid-template-columns: repeat(var(--master-column-count), 1fr);
  }
  
  .grid-secondary {
    grid-template-columns: repeat(var(--split-secondary), 1fr);
  }
  
  .grid-tertiary {
    grid-template-columns: repeat(var(--split-tertiary), 1fr);
  }
    
  .intro-title {
    height: 65vh;
    text-align: left;
    grid-template-rows: 1fr;
  }
  
  .seal {
    order: 1;
    grid-column: 2 / span 2;
  }
  
  .title-text {
    order: 2;    
  }
  
  .intro-blurb {
    height: 30vh;
    padding-top: 0px;
    align-items: end;
  }
  
  .title-text, .intro-blurb .intro-text {
    grid-column: 5 / -2;
  }
  
  .intro-blurb .squiggle {
    grid-column: 2 / 4;
  }
  
  .intro-blurb .intro-text {
    margin-bottom: -0.4em;
  }
  
  .content-container {
    grid-template-columns: repeat(var(--master-column-count), 1fr);
  }
  
  .grid-secondary, .grid-tertiary {
    height: 90vh;
    min-height: 700px;
  }
  
  .grid-secondary {
      max-height: none;
  }

  .case-study {
    grid-column: span var(--split-secondary);
    grid-template-rows: auto 1fr auto;
    align-items: end;
  }
  
  .case-study h2 {
    align-self: end;
  }
  
  .case-study img {
    grid-column: 2 / span 4;
    transform: scale(90%) translateY(0);
  }
  
  .quote {
    grid-column: span var(--split-tertiary);
  }
  
  .responsible, .client-list {
    grid-column: span var(--master-column-count);
  }
  
  .client-list small {
    grid-column: 2 / 5;
  }
  
  .client-list .logo-grid-container {
    grid-column: 7 / -2;
  }
  
  .case-study, .quote {
    grid-row-gap: 0;
    grid-template-rows: auto 1fr auto;
  }
  
  .content-item * {
    grid-column: 2 / -2;
  }
  
  .client-list {
    height: 100vh;
    align-content: center;
    padding-top: 0px;
    padding-bottom: 0px;
    /* grid-template-rows: 1fr auto 1fr; */
  }
  
  .responsible p {
    grid-column: 5 / -3;
  }
  
  .responsible .squiggle {
    grid-column: 2 / -3;
  }
  
  .signature {
    grid-column-start: 5;
  }
  
  footer {
    padding-top: 80px;
    padding-bottom: 80px;
  }
  
  footer .toggle-colophon {
    grid-column: 2 / 4;
  }
  
  footer .contact {
    grid-column: 4 / 6;
    text-align: left;
  }
  
  footer .copyright {
    grid-column: -2 / -6;
    text-align: right;
  }
  
}


@media (min-width: 980px) {
  
  .title-text, .intro-text {
    grid-column: 5 / -2;
  }
  
  .grid-secondary, .grid-tertiary {
    min-height: 800px;
  }
  
  .responsible h2 {
    grid-column: 2 / -4;
  }
  
  .responsible p {
    grid-column: 5 / -4;
  }
  
  .responsible .squiggle {
    grid-column: 2 / -4;
  }
  
}

@media (min-width: 1920px) {
  
  :root{
    --master-column-count: 20;
    --gutter: 26px;
    --split-secondary: 12;
    --split-tertiary: 8;
  }
  
  .seal, .intro-blurb .squiggle {
    grid-column: 2 / 4;
  }
  
  .title-text, .intro-text {
    grid-column: 5 / 12;
  }
  
  .case-study .illustration {
    grid-column: 3 / span 7;
  }
  
  .case-study, .quote, {
    padding-top: 90px;
    padding-bottom: 90px;
  }
  
  .responsible h2 {
    grid-column: 2 / span 12;
    line-height: 0.87;
    margin-bottom: 300px;
  }
  
  .responsible p {
    grid-column: 10 / -6;
  }
  
  .responsible .squiggle {
    grid-column: 2 / -6;
  }
  
  .responsible .signature {
    grid-column-start: 10;
  }
  
}

